<resources>
    <string name="app_name">SimpleWeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="state_label">State:</string>
    <string name="default_state">MI</string>
    <string name="todays_forecast">Get Todays Forecast</string>
    <string name="city_label">City:</string>
    <string name="default_city">Grand Rapids</string>
    <string name="weather_title">Today\'s Weather</string>
</resources>
