<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_marginTop="10dp"
        android:text="@string/weather_title"/>

    <LinearLayout
        android:id="@+id/cityContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerText"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/city_label"/>

        <EditText
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:text="@string/default_city"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityContainer"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/state_label"/>

        <EditText
            android:id="@+id/state_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_state"/>
    </LinearLayout>

    <Button
        android:id="@+id/get_forecast"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/todays_forecast"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/stateContainer"/>

</RelativeLayout>